[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylumix"
version = "0.1.0"
description = "Control Panasonic Lumix cameras over Wi-Fi"
readme = "README.md"
authors = [{ name = "Andreas", email = "andreas@example.com" }]
dependencies = [
    "requests",
]
requires-python = ">=3.7"

[project.scripts]
pylumix = "pylumix.cli:main"
